lint fixes